--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
   <!-- Contact Section -->
   <section id="contact" class="contact-section container">
     <h2>📞 Contact Us</h2>
-    <a href="tel:+919876543210" target="_blank" rel="noopener noreferrer">+91‑98765‑43210</a><br>
+    <a href="tel:+919876543210" target="_blank" rel="noopener noreferrer">+91‑98760-03103</a><br>
     <a href="mailto:ezeecomputers@email.com" target="_blank" rel="noopener noreferrer">ezeecomputers@email.com</a>
     <p>Location: Plot no.-357, Industry Area phase-2 Chandigarh, India</p>
   </section>
 
   <!-- Footer -->
   <footer class="site-footer">
-    <p>© 2025 Ezee Computers • Designed by Arshaan Singh</p>
+    <p>© 2025 • Ezee Computers </p>
   </footer>
 </body>
 </html>
