--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
     <!-- About Us Section -->
     <section id="about" class="info-block">
       <h2>👨‍💼 About Us</h2>
-      <p>We are a locally rooted yet tech-forward IT agency offering reliable hardware and software solutions. From AMC to office setups, our goal is to keep your digital infrastructure running smoothly.</p>
+      <p>Established in 2014, Ezee Computers is a trusted provider of IT solutions and a wide range of hardware products. We specialize in desktops, laptops, workstations, servers, storage systems, printers, toner cartridges, and computer peripherals.
+
+Our expertise extends into enterprise networking — offering switches, routers, unified wireless solutions, and advanced network security infrastructure. In addition, we deliver both application and system-level IT support tailored to business needs.
+
+Backed by a team of highly skilled and dedicated professionals, we aim to deliver cost-effective, reliable, and user-friendly solutions. At Ezee Computers, we believe in blending cutting-edge technology with exceptional service to empower businesses across industries.</p>
     </section>
 
     <!-- Services Section -->
