--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ Backed by a team of highly skilled and dedicated professionals, we aim to delive
       <h2>🔧 Services Offered</h2>
       <ul class="services-list">
         <li>OS Installation, Antivirus, Troubleshooting</li>
-        <li>Annual Maintenance Contracts (AMC)</li>
         <li>Office IT Setup and Maintenance</li>
         <li>Remote Tech Support for Businesses</li>
+        <li>All type of Printer services</li>
       </ul>
     </section>
 
@@ -61,9 +61,10 @@ Backed by a team of highly skilled and dedicated professionals, we aim to delive
     <section id="products" class="info-block black-box">
       <h2>🖥️ Products Provided</h2>
       <ul class="products-list">
+        <li>All type of toner cartarges</li>
+        <li>Ink Jet printer's Ink</li>>
         <li>Laptops and Desktops (HP, Dell, Lenovo)</li>
         <li>Printers & Scanners (Canon, Epson, HP)</li>
-        <li>Routers & Networking Devices (TP-Link, D-Link)</li>
         <li>CCTV Systems and Surveillance Kits</li>
         <li>Computer Accessories (RAM, SSD, Keyboards, Mouse)</li>
       </ul>
@@ -73,9 +74,11 @@ Backed by a team of highly skilled and dedicated professionals, we aim to delive
     <section id="clients" class="info-block black-box">
       <h2>🏢 Our Clients</h2>
       <ul class="clients-list">
-        <li>XYZ Industries Pvt. Ltd.</li>
-        <li>ABC School, Chandigarh</li>
-        <li>Local Clinics & Retail Outlets</li>
+        <li>Kandhari Beverages Pvt. Ltd.</li>
+        <li>Punjab University, Chandigarh</li>
+        <li>JCBL Group</li>
+        <li>Central Cooperative Bank Limited</li>
+        <li>St. John's High School - Chandigarh</li>
       </ul>
     </section>
   </main>
