--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Backed by a team of highly skilled and dedicated professionals, we aim to delive
       <h2>🖥️ Products Provided</h2>
       <ul class="products-list">
         <li>All type of toner cartarges</li>
-        <li>Ink Jet printer's Ink</li>>
+        <li>Ink Jet printer's Ink</li>
         <li>Laptops and Desktops (HP, Dell, Lenovo)</li>
         <li>Printers & Scanners (Canon, Epson, HP)</li>
         <li>CCTV Systems and Surveillance Kits</li>
