--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Backed by a team of highly skilled and dedicated professionals, we aim to delive
         <li>Kandhari Beverages Pvt. Ltd.</li>
         <li>Punjab University, Chandigarh</li>
         <li>JCBL Group</li>
-        <li>Central Cooperative Bank Limited</li>
+        <li>Cooperative Bank Limited</li>
         <li>St. John's High School - Chandigarh</li>
       </ul>
     </section>
