--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container">
-      <h1>Ezee Computers</h1>
+      <h1 style="color: rgb(29, 42, 223);">Ezee Computers</h1>
       <p>Your Trusted IT Hardware & Support Partner</p>
       <nav>
         <a href="#about">About</a>
